@@ -1,3 +1,11 @@
+2011-04-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * scintilla/gtk/ScintillaGTK.cxx:
+   Fix X PRIMARY selection issue when Scintilla widget is
+   unrealized/re-realized
+   (Backport from Scintilla HG, original patch by Matthew Brush).
+
+
 2011-04-04  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * scintilla/gtk/PlatGTK.cxx:
